# gen-ai-agents

./: .gitignore  README.md  pyproject.toml  run_adk.bat
hr_agent/: agent.py
my_agent/: agent.py  custom_mcp.py  ilaya_info.txt  requirements.txt
my_mcp/: server.py
rag/: deployment_readme.md  ingestion.py  query.py  query_payload.py
rag/e2e-rag-streamlit/: Dockerfile  app.py  deployment_readme.md  requirements.txt
rag/ingestion_retrival_pipe/: ingestion.py
rag/retrival_pipe_api/: Dockerfile  deployment.txt  main.py  requirements.txt  retrieval.py  retrieval_api_test.py
test_agent_langsmith/: Dockerfile  agent.py  main.py  observability.py  readme.md  requirements.txt
