[project]
name = "my-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.4",
    "google-adk>=2.4.0",
    "google-cloud-bigquery>=3.42.2",
    "groq>=1.5.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "mcp>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "streamlit>=1.35.0",
]
